[tool.poetry]
name = "cw-3-hh-superjob"
version = "0.1.0"
description = ""
authors = ["Vladimir Shtefan <vladimir.shtefan@skyeng.ru>"]
readme = "README.md"
packages = [{include = "cw_3_hh_superjob"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
